tests/baselines/reference/parserClassDeclaration4.errors.txt
parserClassDeclaration4.ts(1,17): error TS2304: Cannot find name 'A'.
parserClassDeclaration4.ts(1,30): error TS2304: Cannot find name 'B'.
parserClassDeclaration4.ts(1,32): error TS1172: 'extends' clause already seen.


==== parserClassDeclaration4.ts (3 errors) ====
    class C extends A implements B extends C {
                    ~
!!! error TS2304: Cannot find name 'A'.
                                 ~
!!! error TS2304: Cannot find name 'B'.
                                   ~~~~~~~
!!! error TS1172: 'extends' clause already seen.
    }